chore: analyze OpenJPA 4.1.1 for class selection